# SLAM_v1

./: .gitignore  README.md  RUN_GUIDE.md
scripts/: 99-my-robot.rules  test_imu_axes.py
src/: sllidar_ros2
src/my_robot/: package.xml  setup.py
src/my_robot/config/: ekf.yaml  motor_params.yaml  nav2_params.yaml  slam_params.yaml
src/my_robot/launch/: bringup.launch.py  motor_controller.launch.py  navigation.launch.py  slam.launch.py
src/my_robot/my_robot/: imu_node.py  motor_controller_node.py
src/my_robot/urdf/: my_robot.urdf
